Removed >50 issues reported by SonarQube. Ref: #18